@@ -66,8 +66,7 @@ public class StackViewService {
 
     public Optional<StackView> findDatalakeViewByEnvironmentCrn(String environmentCrn) {
         List<StackView> result = stackViewRepository.findDatalakeViewByEnvironmentCrnOrderedByCreationTime(environmentCrn);
-        return  result.isEmpty() ? Optional.empty()
-                : Optional.of(stackViewRepository.findDatalakeViewByEnvironmentCrnOrderedByCreationTime(environmentCrn).get(0));
+        return result.isEmpty() ? Optional.empty() : Optional.of(result.getFirst());
     }
 
 }
